# arkopy

./: .gitignore  README.md  pyproject.toml  tests.py
arko/: __init__.py  dumper.py  lexer.py  models.py  parser.py
