[tool.poetry]
name = "arkopy"
version = "0.1.0"
description = "Parse and generate Arkotheque-style URL parameters."
authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
